[tool.poetry]
name = "group-project"
version = "0.1.0"
description = "\"Projet fairness avec Farah/Zak/Saf/Tonio et moi\""
authors = ["CharlDc9 <charldec99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
